[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/player/Bird.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/game_screen/Background.png" type="Texture" id=2]
[ext_resource path="res://assets/game_screen/GameScene.gd" type="Script" id=3]
[ext_resource path="res://assets/interface/Interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/game_screen/grount_tileset.tres" type="TileSet" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 92.5, 23.5 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 3 )

[node name="Bird" parent="." instance=ExtResource( 1 )]
position = Vector2( -50, 0 )

[node name="BackgroundRoot" type="Node2D" parent="."]
position = Vector2( 0, -51 )

[node name="Background" type="Sprite" parent="BackgroundRoot"]
pause_mode = 2
position = Vector2( -28, -201 )
scale = Vector2( 1.5, 1.5 )
z_index = -10
texture = ExtResource( 2 )
centered = false

[node name="Background2" type="Sprite" parent="BackgroundRoot"]
position = Vector2( 356, -201 )
scale = Vector2( 1.5, 1.5 )
z_index = -10
texture = ExtResource( 2 )
centered = false

[node name="Background3" type="Sprite" parent="BackgroundRoot"]
pause_mode = 2
position = Vector2( -412, -201 )
scale = Vector2( 1.5, 1.5 )
z_index = -10
texture = ExtResource( 2 )
centered = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 136.5 )
shape = SubResource( 1 )

[node name="Ground" type="TileMap" parent="."]
z_index = 3
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_layer = 2
format = 1
tile_data = PoolIntArray( 524262, 0, 0, 524263, 0, 1, 524264, 0, 1, 524265, 0, 1, 524266, 0, 1, 524267, 0, 1, 524268, 0, 1, 524269, 0, 1, 524270, 0, 1, 524271, 0, 1, 524272, 0, 1, 524273, 0, 1, 524274, 0, 1, 524275, 0, 1, 524276, 0, 1, 524277, 0, 1, 524278, 0, 1, 524279, 0, 1, 524280, 0, 1, 524281, 0, 1, 524282, 0, 1, 524283, 0, 1, 524284, 0, 1, 524285, 0, 1, 524286, 0, 1, 524287, 0, 1, 458752, 0, 1, 458753, 0, 1, 458754, 0, 1, 458755, 0, 1, 458756, 0, 1, 458757, 0, 1, 458758, 0, 1, 458759, 0, 1, 458760, 0, 1, 458761, 0, 1, 458762, 0, 1, 458763, 0, 1, 458764, 0, 1, 458765, 0, 1, 458766, 0, 1, 458767, 0, 1, 458768, 0, 1, 458769, 0, 1, 458770, 0, 1, 458771, 0, 1, 458772, 0, 1, 458773, 0, 1, 458774, 0, 1, 458775, 0, 1, 458776, 0, 1, 458777, 0, 1, 458778, 0, 1, 458779, 0, 1, 458780, 0, 1, 458781, 0, 1, 458782, 0, 1, 458783, 0, 1, 458784, 0, 1, 458785, 0, 1, 458786, 0, 1, 458787, 0, 1, 458788, 0, 1, 458789, 0, 1, 458790, 0, 1, 458791, 0, 1, 458792, 0, 1, 458793, 0, 1, 458794, 0, 1, 458795, 0, 1, 458796, 0, 1, 458797, 0, 1, 458798, 0, 2, 589798, 0, 65536, 589799, 0, 65537, 589800, 0, 65537, 589801, 0, 65537, 589802, 0, 65537, 589803, 0, 65537, 589804, 0, 65537, 589805, 0, 65537, 589806, 0, 65537, 589807, 0, 65537, 589808, 0, 65537, 589809, 0, 65537, 589810, 0, 65537, 589811, 0, 65537, 589812, 0, 65537, 589813, 0, 65537, 589814, 0, 65537, 589815, 0, 65537, 589816, 0, 65537, 589817, 0, 65537, 589818, 0, 65537, 589819, 0, 65537, 589820, 0, 65537, 589821, 0, 65537, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65537, 524307, 0, 65537, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65537, 524311, 0, 65537, 524312, 0, 65537, 524313, 0, 65537, 524314, 0, 65537, 524315, 0, 65537, 524316, 0, 65537, 524317, 0, 65537, 524318, 0, 65537, 524319, 0, 65537, 524320, 0, 65537, 524321, 0, 65537, 524322, 0, 65537, 524323, 0, 65537, 524324, 0, 65537, 524325, 0, 65537, 524326, 0, 65537, 524327, 0, 65537, 524328, 0, 65537, 524329, 0, 65537, 524330, 0, 65537, 524331, 0, 65537, 524332, 0, 65537, 524333, 0, 65537, 524334, 0, 65538, 655334, 0, 131072, 655335, 0, 131073, 655336, 0, 131073, 655337, 0, 131073, 655338, 0, 131073, 655339, 0, 131073, 655340, 0, 131073, 655341, 0, 131073, 655342, 0, 131073, 655343, 0, 131073, 655344, 0, 131073, 655345, 0, 131073, 655346, 0, 131073, 655347, 0, 131073, 655348, 0, 131073, 655349, 0, 131073, 655350, 0, 131073, 655351, 0, 131073, 655352, 0, 131073, 655353, 0, 131073, 655354, 0, 131073, 655355, 0, 131073, 655356, 0, 131073, 655357, 0, 131073, 655358, 0, 131073, 655359, 0, 131073, 589824, 0, 131073, 589825, 0, 131073, 589826, 0, 131073, 589827, 0, 131073, 589828, 0, 131073, 589829, 0, 131073, 589830, 0, 131073, 589831, 0, 131073, 589832, 0, 131073, 589833, 0, 131073, 589834, 0, 131073, 589835, 0, 131073, 589836, 0, 131073, 589837, 0, 131073, 589838, 0, 131073, 589839, 0, 131073, 589840, 0, 131073, 589841, 0, 131073, 589842, 0, 131073, 589843, 0, 131073, 589844, 0, 131073, 589845, 0, 131073, 589846, 0, 131073, 589847, 0, 131073, 589848, 0, 131073, 589849, 0, 131073, 589850, 0, 131073, 589851, 0, 131073, 589852, 0, 131073, 589853, 0, 131073, 589854, 0, 131073, 589855, 0, 131073, 589856, 0, 131073, 589857, 0, 131073, 589858, 0, 131073, 589859, 0, 131073, 589860, 0, 131073, 589861, 0, 131073, 589862, 0, 131073, 589863, 0, 131073, 589864, 0, 131073, 589865, 0, 131073, 589866, 0, 131073, 589867, 0, 131073, 589868, 0, 131073, 589869, 0, 131073, 589870, 0, 131074 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="InterfaceCanvas" type="CanvasLayer" parent="."]
layer = 2

[node name="Interface" parent="InterfaceCanvas" instance=ExtResource( 4 )]

[connection signal="on_game_end" from="." to="BackgroundRoot" method="_on_game_end"]
[connection signal="s_bird_hit" from="Bird" to="." method="on_bird_collision"]
[connection signal="area_entered" from="Area2D" to="." method="on_bird_collision"]
[connection signal="close_pressed" from="InterfaceCanvas/Interface" to="." method="on_button_close_pressed"]
[connection signal="countdown_ended" from="InterfaceCanvas/Interface" to="." method="on_countdown_ended"]
[connection signal="restart_pressed" from="InterfaceCanvas/Interface" to="." method="on_button_restart_pressed"]
